# DevAgent

./: .env.example  .gitignore  DevAgent_Architecture_v3.docx  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml
agent/: config.py  errors.py  llm.py  logging.py  main.py  observability.py
agent/interface/: cli.py  renderer.py  web.py
agent/memory/: agent_docs.py  budget.py  cost.py  effects.py  longterm.py  session.py  vector.py
agent/pipeline/: concurrent.py  graph.py  meta_agent.py  meta_agent_v2.py  models.py  state.py
agent/pipeline/mining/: knowledge_db.py  miner.py  pattern_extractor.py
agent/pipeline/nodes/: contract_extractor.py  contract_validator.py  doc_writer.py  enricher.py  executor.py  explainer.py  input_router.py  ranker.py  reader.py  reviewer.py
agent/pipeline/prompts/: __init__.py  executor.py  explainer.py  reviewer.py
agent/providers/: base.py  mcp_bootstrap.py  mcp_classifier.py  mcp_client.py  mcp_providers.py  multi.py  registry.py  tool_catalog.py  web_search.py
agent/registry/: skill_registry.py  tool_manager.py
agent/security/: sanitizer.py
agent/skills/: code_search.py  diff_agent.py  doc_search.py  task_search.py
agent/utils/: lockfile.py  timeout.py
cli.dist/: libXau.6.dylib  libcrypto.3.dylib  libgcc_s.1.1.dylib  libgfortran.5.dylib  libjpeg.62.4.0.dylib  liblcms2.2.dylib  liblzma.5.dylib  libncursesw.5.dylib  libopenjp2.2.5.4.dylib  libsharpyuv.0.dylib  libssl.3.dylib  libtcl8.6.dylib  libtiff.6.dylib  libtk8.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libxcb.1.1.0.dylib  libz.1.3.1.zlib-ng.dylib
tests/: bench.py  conftest.py  smoke_iter1.py  smoke_iter2.py  smoke_iter3.py  smoke_iter4.py  test_foundation.py  test_iteration2.py  test_iteration3.py  test_iteration4.py  test_mcp.py  test_memory.py  test_nodes.py  test_providers.py  test_stage2.py
(+6 files in other folders)
